#[[
This source file is part of the IORingSwift open source project

Copyright (c) 2024 PADL Software Pty Ltd and the IORingSwift project authors
Licensed under Apache License v2.0

See https://github.com/PADL/IORingSwift/blob/main/LICENSE for license information
#]]

add_subdirectory(CIOURing)
add_subdirectory(CIORingShims)
add_subdirectory(IORing)
add_subdirectory(IORingUtils)
add_subdirectory(IORingFoundation)
